# markdown-split

./: Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs  split.rs
tests/fixtures/: ch01-01-installation.en.md  ch01-01-installation.ja.md
