[package]
name = "markdown-split"
description = "Split a markdown text into sections based on headings."
version = "0.1.1"
edition = "2021"
authors = ["kaoru <k@warpnine.io>"]
license = "MIT"
homepage = "https://github.com/0x6b/markdown-split"
repository = "https://github.com/0x6b/markdown-split"
readme = "README.md"
categories = ["text-processing"]
keywords = ["markdown", "split", "ast"]

[lib]
name = "markdown_split"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
markdown = "1.0.0-alpha"
itertools = "0.13"
